[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Spam.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Rice.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Nori.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Wrap.gd" type="Script" id=4]

[node name="Inventory" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.631373, 0.513726, 0.239216, 1 )

[node name="Spam" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Spam_1" type="Button" parent="Spam"]
margin_left = 343.0
margin_top = 126.0
margin_right = 433.0
margin_bottom = 157.0
text = "Spam 1"

[node name="Spam_2" type="Button" parent="Spam"]
margin_left = 454.0
margin_top = 124.0
margin_right = 544.0
margin_bottom = 155.0
text = "Spam 2"

[node name="Spam_3" type="Button" parent="Spam"]
margin_left = 561.0
margin_top = 124.0
margin_right = 651.0
margin_bottom = 155.0
text = "Spam 3"

[node name="Spam_Label" type="RichTextLabel" parent="Spam"]
margin_left = 486.0
margin_top = 68.0
margin_right = 651.0
margin_bottom = 108.0
text = "Spam cans "

[node name="Rice" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Rice_1" type="Button" parent="Rice"]
margin_left = 343.0
margin_top = 234.0
margin_right = 433.0
margin_bottom = 265.0
text = "Rice 1"

[node name="Rice_2" type="Button" parent="Rice"]
margin_left = 454.0
margin_top = 232.0
margin_right = 544.0
margin_bottom = 263.0
text = "Rice 2"

[node name="Rice_3" type="Button" parent="Rice"]
margin_left = 561.0
margin_top = 232.0
margin_right = 651.0
margin_bottom = 263.0
text = "Rice 3"

[node name="Rice_Label" type="RichTextLabel" parent="Rice"]
margin_left = 464.0
margin_top = 186.0
margin_right = 629.0
margin_bottom = 226.0
text = "Rice Bags "

[node name="Nori" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Nori_1" type="Button" parent="Nori"]
margin_left = 347.0
margin_top = 324.0
margin_right = 437.0
margin_bottom = 355.0
text = "Nori 1"

[node name="Nori_2" type="Button" parent="Nori"]
margin_left = 458.0
margin_top = 322.0
margin_right = 548.0
margin_bottom = 353.0
text = "Nori 2"

[node name="Nori_3" type="Button" parent="Nori"]
margin_left = 565.0
margin_top = 322.0
margin_right = 655.0
margin_bottom = 353.0
text = "Nori 3"

[node name="Nori_Label" type="RichTextLabel" parent="Nori"]
margin_left = 471.0
margin_top = 284.0
margin_right = 636.0
margin_bottom = 324.0
text = "Nori Bags"

[node name="Wrap" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Wrap_1" type="Button" parent="Wrap"]
margin_left = 346.0
margin_top = 447.0
margin_right = 436.0
margin_bottom = 478.0
text = "Wrap 1"

[node name="Wrap_2" type="Button" parent="Wrap"]
margin_left = 457.0
margin_top = 445.0
margin_right = 547.0
margin_bottom = 476.0
text = "Wrap 2"

[node name="Wrap_3" type="Button" parent="Wrap"]
margin_left = 564.0
margin_top = 445.0
margin_right = 654.0
margin_bottom = 476.0
text = "Wrap 3"

[node name="Wrap_Label" type="RichTextLabel" parent="Wrap"]
margin_left = 464.0
margin_top = 408.0
margin_right = 629.0
margin_bottom = 448.0
text = "Boxes of Wrap"

[node name="Money" type="RichTextLabel" parent="."]
margin_left = 33.0
margin_top = 32.0
margin_right = 221.0
margin_bottom = 95.0
text = "Money: $100.00"

[connection signal="pressed" from="Spam/Spam_1" to="Spam" method="_on_Spam_1_pressed"]
[connection signal="pressed" from="Spam/Spam_2" to="Spam" method="_on_Spam_2_pressed"]
[connection signal="pressed" from="Spam/Spam_3" to="Spam" method="_on_Spam_3_pressed"]
[connection signal="pressed" from="Rice/Rice_1" to="Rice" method="_on_Rice_1_pressed"]
[connection signal="pressed" from="Rice/Rice_2" to="Rice" method="_on_Rice_2_pressed"]
[connection signal="pressed" from="Rice/Rice_3" to="Rice" method="_on_Rice_3_pressed"]
[connection signal="pressed" from="Nori/Nori_1" to="Nori" method="_on_Nori_1_pressed"]
[connection signal="pressed" from="Nori/Nori_2" to="Nori" method="_on_Nori_2_pressed"]
[connection signal="pressed" from="Nori/Nori_3" to="Nori" method="_on_Nori_3_pressed"]
[connection signal="pressed" from="Wrap/Wrap_1" to="Wrap" method="_on_Wrap_1_pressed"]
[connection signal="pressed" from="Wrap/Wrap_2" to="Wrap" method="_on_Wrap_2_pressed"]
[connection signal="pressed" from="Wrap/Wrap_3" to="Wrap" method="_on_Wrap_3_pressed"]
